--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- id는 js용, class는 css용 -->
+    <canvas id="jsCanvas" class="canvas"></canvas>
     <script src="app.js"></script>
 </body>
 </html>
