--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PaingtJS</title>
+    <title>PaintingJS</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- id는 js용, class는 css용 -->
+    <!-- 색칠판 -->
     <canvas id="jsCanvas" class="canvas"></canvas>
+    <!--  -->
+    <div class="controls">
+        <div class="controls__colors" id="colors">
+            <div class="controls__color" style="background-color: black;"></div>
+            <div class="controls__color" style="background-color: white;"></div>
+            <div class="controls__color" style="background-color: red;"></div>
+            <div class="controls__color" style="background-color: orange;"></div>
+            <div class="controls__color" style="background-color: yellow;"></div>
+            <div class="controls__color" style="background-color: green;"></div>
+            <div class="controls__color" style="background-color: skyblue;"></div>
+            <div class="controls__color" style="background-color: blue;"></div>
+            <div class="controls__color" style="background-color: purple;"></div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
